--- a/src/Kooco.Pikachu.Blazor/Pages/EdmManagement/CreateEdm.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/EdmManagement/CreateEdm.razor
@@ -244,7 +244,16 @@
                                 </Field>
                             </Validation>
                             <Field>
-                                <FieldLabel required>@L["Message"]</FieldLabel>
+                                <Div Class="d-flex justify-content-between align-items-end mb-1">
+                                    <FieldLabel required>@L["Message"]</FieldLabel>
+                                    @if (Entity.TemplateType == EdmTemplateType.Customize)
+                                    {
+                                        <PikachuButton Class="pk-btn-sm pk-btn-outline-primary"
+                                                       Clicked="@InsertGroupBuy">
+                                            @L["InsertGroupBuy"]
+                                        </PikachuButton>
+                                    }
+                                </Div>
                                 <Div Class="@(ValidationClass(nameof(Entity.Message)) + " quill-editor")">
                                     <BlazoredTextEditor @ref="@MessageHtml" Placeholder="@L["Composeanepic"]">
                                         <ToolbarContent>
