Commit For Pk-1561

--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/Items.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/Items.razor
@@ -438,8 +438,8 @@
             <AlertDescription>           <ul class="mb-0">
                 <li>@L["DownloadTemplateInstruction"]</li>
                 <li>@L["FillTemplateInstruction"]</li>
-                <li>If one item have multipal item details add item that times with same item no.</li>
-                <li>TaxTypes: Taxable and Non Taxable</li>
+                            <li>@L["ItemDetailsInstructions"]</li>
+                            <li>@L["TaxTypesInstructions"]</li>
                 <li>@L["UploadTemplateInstruction"]</li>
             </ul>
             </AlertDescription>
