#PK-1550 Return & Exchange status modification

--- a/src/Kooco.Pikachu.Blazor/Pages/ReturnAndExchangeOrders/ReturnAndExchangeOrder.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ReturnAndExchangeOrders/ReturnAndExchangeOrder.razor
@@ -117,9 +117,9 @@
                                         SelectedValue="@context.ReturnStatus"
                                         SelectedValueChanged="@(e => ReturnStatusChanged(e, context))">
 
-                                    @foreach (var enumValue in Enum.GetValues(typeof(OrderReturnStatus)))
+                                    @foreach (OrderReturnStatus enumValue in Enum.GetValues(typeof(OrderReturnStatus)))
                                     {
-                                        @if (enumValue.ToString() == "Processing" || enumValue.ToString() == "Succeeded")
+                                        @if (enumValue.ToString() == "Processing" || enumValue.ToString() == "Succeeded" || enumValue == OrderReturnStatus.Cancelled)
                                         {
                                             @if (enumValue.ToString() == "Succeeded")
                                             {
