--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -775,18 +775,10 @@
                 CheckedChanged="OnCreditCardCheckedChange">
                     @L["CreditCard"]
                 </Check>
-                <div class="row justify-content-center mb-2">
-                    <div class="col-12">
-                        @foreach (var period in Constant.InstallmentPeriods)
-                        {
-                            <Check Inline TValue="bool" Checked="@CreateGroupBuyDto.InstallmentPeriods.Contains(period)"
-                            CheckedChanged="(e) => OnInstallmentPeriodChange(e, period)"
-                            Disabled="IsInstallmentPeriodEnabled(period)">
-                                @L["InstallmentPeriods." + period]
-                            </Check>
-                        }
-                    </div>
-                </div>
+                <Check Inline TValue="bool" @bind-Checked="@CreateGroupBuyDto.IsInstallmentsEnabled"
+                            Disabled="IsInstallmentPeriodEnabled()">
+                    @L["Installments"]
+                </Check>
                 <Check TValue="bool" Disabled=@(CreateGroupBuyDto.IsEnterprise||isPaymentMethodEnabled()) @bind-Checked="@BankTransfer">@L["BankTransfer"]</Check>
                 <Check TValue="bool" Disabled=@(CreateGroupBuyDto.IsEnterprise||isLinePayPaymentMethodEnabled()) @bind-Checked="@IsLinePay">@L["LinePay"]</Check>
                 <Check TValue="bool"
