#PK-1483 Inventory Logs Implementation

--- a/src/Kooco.Pikachu.Blazor/Pages/InventoryManagement/AdjustStockModal.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/InventoryManagement/AdjustStockModal.razor
@@ -3,6 +3,7 @@
 @using Kooco.Pikachu.InventoryManagement
 @inherits PikachuComponentBase
 @inject AbpBlazorMessageLocalizerHelper<PikachuResource> LH
+@inject IInventoryLogAppService InventoryLogAppService
 
 <Modal @ref="ModalRef">
     <ModalContent Centered Size="ModalSize.Large">
