--- a/src/Kooco.Pikachu.Blazor/Pages/InventoryManagement/Inventory.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/InventoryManagement/Inventory.razor
@@ -4,6 +4,7 @@
 @inherits PikachuComponentBase
 @inject IInventoryAppService InventoryAppService
 @inject ExcelDownloadHelper ExcelDownloadHelper
+@inject NavigationManager NavigationManager
 
 <style>
     .entry-row .content-header-title {
@@ -104,5 +105,3 @@
         </Div>
     </CardBody>
 </Card>
-
-<InventoryLogs @ref="InventoryLogsRef" />
